blog_posts_app/k8s-configs/development/ingress/dev-blog-posts-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-blog-posts-backend-ingress
  namespace: development
  annotations:
    # 1. Tells NGINX to talk to the backend pods over HTTPS instead of HTTP
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

    # 2. Replaces Traefik's 'serverName' to handle the SNI / Pod IP mismatch
    nginx.ingress.kubernetes.io/proxy-ssl-name: "development.backend.blog-posts.com.localhost"

    # 3. Forces NGINX to verify the backend certificate against a CA
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"

    # 4. Replaces Traefik's 'rootCAsSecrets' (Format: "namespace/secret-name")
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "development/dev-backend-ca"
spec:
  tls:
    - secretName: development-backend-tls-secret
      hosts:
        - development.backend.blog-posts.com.localhost
  rules:
  - host: development.backend.blog-posts.com.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rest-internal-service
            port: 
              number: 80
  ingressClassName: nginx
