blog_posts_app/k8s-configs/development/ingress/dev-blog-posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-blog-posts-ingress
  namespace: development
spec:
  tls:
    - secretName: development-blog-posts-com-tls
      hosts:
        - development.blog-posts.com.localhost
  rules:
  - host: development.blog-posts.com.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-internal-service
            port: 
              number: 80
  ingressClassName: nginx
